Criação do Endpoint Pontuacao